Search suggestion and searched data popuplated

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,15 +10,20 @@
 <div class="iT_main">
   <div class="iT_header">
     <!-- search bar for -->
-    <ion-searchbar class="iT_seachbar_bg" (ionInput)="getSearchData(searchData)" [(ngModel)]="searchData"></ion-searchbar>
+    <ion-searchbar class="iT_seachbar_bg" (ionInput)="getSearchSuggestions(searchData)" [(ngModel)]="searchData"></ion-searchbar>
   </div>
   <div class="iT_body">
     <ion-scroll style="flex: 1" scrollX="false" scrollY="true">
-      <ion-card>
+      <ion-list>
+        <button ion-item *ngFor="let list of search.suggestions" (click)="getVideos(list)">
+          {{list}}
+        </button>
+      </ion-list>
+      <!-- <ion-card>
         <ion-card-content no-padding>
           <list [data]="listData"></list>
         </ion-card-content>
-      </ion-card>
+      </ion-card> -->
     </ion-scroll>
   </div>
 </div>
