--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,29 +1,23 @@
-<!-- <ion-header>
+<!-- <toolbar></toolbar> -->
+<ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>iTubeder</ion-title>
   </ion-navbar>
-</ion-header> -->
-
-<div class="iT_main">
-  <div class="iT_header">
-    <!-- search bar for -->
-    <ion-searchbar class="iT_seachbar_bg" (ionInput)="getSearchSuggestions(searchData)" [(ngModel)]="searchData"></ion-searchbar>
+</ion-header>
+<ion-content>
+  <div class="iT_main">
+    <div class="iT_header">
+      <!-- search bar for -->
+      <ion-searchbar class="iT_seachbar_bg" (ionInput)="getSearchSuggestions(searchData)" [(ngModel)]="searchData"></ion-searchbar>
+    </div>
+    <div class="iT_body">
+      <ion-scroll style="flex: 1" scrollX="false" scrollY="true">
+        <ion-list>
+          <button ion-item *ngFor="let list of search.suggestions" (click)="getVideos(list)">
+            {{list}}
+          </button>
+        </ion-list>
+      </ion-scroll>
+    </div>
   </div>
-  <div class="iT_body">
-    <ion-scroll style="flex: 1" scrollX="false" scrollY="true">
-      <ion-list>
-        <button ion-item *ngFor="let list of search.suggestions" (click)="getVideos(list)">
-          {{list}}
-        </button>
-      </ion-list>
-      <!-- <ion-card>
-        <ion-card-content no-padding>
-          <list [data]="listData"></list>
-        </ion-card-content>
-      </ion-card> -->
-    </ion-scroll>
-  </div>
-</div>
+</ion-content>
