--- a/src/pages/preview/preview.html
+++ b/src/pages/preview/preview.html
@@ -17,4 +17,24 @@
       </ion-item>
     </ion-card-content>
   </ion-card>
+  <ion-card margin-top>
+    <ion-card-content text-center>
+      <ion-card-title>
+        <strong>{{data.snippet.title}}</strong>
+      </ion-card-title>
+      <p text-capitalize>
+        <b>Note:</b> Save this video to your photo library.
+      </p>
+      <h1 color="primary">Enjoy!</h1>
+      <button ion-button class="iT_btn" (click)="saveVideoToPhotos()" round>Save Now
+        <ion-icon name="cloud-download" ios="ios-cloud-download-outline" margin-left></ion-icon>
+      </button>
+    </ion-card-content>
+  </ion-card>
+
+  <button ion-button class="iT_btn" (click)="getImages()" round>Get images</button>
+  <div *ngFor="let item of imageList">
+    <span>{{item}}</span>
+  </div>
+  {{imageList | json}}
 </ion-content>
