--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
         <h1 no-margin>iTubeder</h1>
       </div>
       <!-- search bar for -->
-      <div class="iT_seachbar" [ngClass]="{'iT_showSearch': showSearch == false}">
+      <div class="iT_seachbar">
         <form (ngSubmit)="getVideos(searchData)">
           <input type="search" name="search" autocomplete="off" placeholder="Search" (ngModelChange)="getSearchSuggestions(searchData)"
             [(ngModel)]="searchData" />
@@ -23,7 +23,7 @@
           </ion-list>
         </div>
       </div>
-      <div #scroll style="flex: 1; overflow-y: scroll" (scroll)="scrolling()">
+      <div #scroll style="flex: 1; overflow-y: scroll">
         <ion-grid>
           <!-- loading -->
           <ion-row *ngIf="!loaded">
@@ -36,8 +36,8 @@
           </ion-row>
           <!-- main content -->
           <ion-row *ngIf="loaded">
-            <ion-col *ngFor="let item of search.trands" col-12>
-              <ion-card (click)="preview(item)" tappable>
+            <ion-col *ngFor="let item of search.trands" col-lg-3 col-md-4 col-sm-6 col-xs-12 align-self-stretch padding>
+              <ion-card (click)="preview(item)" tappable style="height: 100%;width: 100%;" no-margin>
                 <img src="{{item.snippet.thumbnails.high.url}}" />
                 <ion-card-content no-padding>
                   <ion-item>
