--- a/src/pages/search-results/search-results.html
+++ b/src/pages/search-results/search-results.html
@@ -6,7 +6,7 @@
 
 <ion-content no-padding>
   <ion-list>
-    <ion-item *ngFor="let list of search.result" (click)="preview(list)">
+    <ion-item *ngFor="let list of search.result" (click)="preview(list)" tappable>
       <ion-thumbnail item-start>
         <img src="{{list.snippet.thumbnails.default.url}}">
       </ion-thumbnail>
